<resources>
    <string name="app_name">PokemonTinder</string>
    <string name="web_client_id">553429131105-el68jsvtfi6cj3obghflv7r5bd8p7be7.apps.googleusercontent.com</string>
    <string name="dialog_create_account_positive_button">ok</string>
    <string name="dialog_cancel_account_creation">cancel</string>
    <string name="google_sign_in_required">First, a Google login is required</string>
    <string name="choose_your_pokemon">Choose a Pokemon to represent you. Search by Pokemon name
        or Pokedex ID (Range: [1-721]) Each Pokemon\'s moves are randomly assigned from what they\'re
        able to learn.</string>
    <string name="pokemon_choice_hint">Name or ID:</string>
    <string name="find_pokemon">Search</string>
    <string name="create_account_title_text_view">Choose Pokemon</string>
    <string name="search">Search</string>
    <string name="create_account">Create Account</string>
    <string name="find_matches">Find matches</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="matches_title">Matches</string>
    <string name="messages_title">Messages</string>

</resources>
