<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.carpenter.dean.pokemontinder.CreateAccountActivity">

    <TextView
        android:id="@+id/create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/create_account_title_text_view" />

    <TextView
        android:id="@+id/google_required_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/google_sign_in_required" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/create_account_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_required_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/choose_pokemon_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account_sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/choose_your_pokemon" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/choose_pokemon_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_pokemon_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/pokemon_choice_hint" />


    <Button
        android:id="@+id/find_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_pokemon_text_view"
        android:layout_toEndOf="@id/choose_pokemon_edit_text"
        android:text="@string/search" />

    <Button
        android:id="@+id/account_activity_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/account_activity_create_account_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/find_pokemon"

        >

        <ImageView
            android:id="@+id/account_creation_pokemon_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"

            />
    </FrameLayout>


</RelativeLayout>
